--- a/web/src/components/Section/Projects/Projects.module.scss
+++ b/web/src/components/Section/Projects/Projects.module.scss
@@ -23,7 +23,7 @@
 .FloatingControls {
   position: fixed;
   right: spacing(1);
-  top: spacing(7);
+  top: spacing(7.5);
   bottom: 0;
   z-index: 10;
 }
